--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  cloud_firestore:
+
+  flutter_bloc: ^0.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
