--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: Cross-platform chat client using Firebase
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -20,11 +20,20 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  cloud_firestore:
-
   flutter_bloc: ^0.7.0
 
+  firebase_auth:
+
+  google_sign_in:
+
+  flutter_facebook_login: ^2.0.0
+
+  cloud_firestore:
+
+  shared_preferences: ^0.5.0
+
 dev_dependencies:
+  test: ^1.5.3
   flutter_test:
     sdk: flutter
 
