--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,17 +20,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  flutter_bloc: ^0.7.0
-
+  flutter_bloc:
   firebase_auth:
-
   google_sign_in:
-
-  flutter_facebook_login: ^2.0.0
-
+  flutter_facebook_login:
   cloud_firestore:
-
-  shared_preferences: ^0.5.0
+  shared_preferences:
 
 dev_dependencies:
   test: ^1.5.3
