Added explicit ref to fix-loginkit-dependency for flutter_facebook_login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   cloud_firestore:
   google_sign_in:
   flutter_facebook_login:
+    git:
+      url: https://github.com/qurami/flutter_facebook_login.git
+      ref: fix-loginkit-dependency
   shared_preferences:
 
 dev_dependencies:
