Added explicit flutter_facebook_login src ref to fix broken FBSDKLogin dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: Cross-platform chat client using Firebase
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -27,8 +27,8 @@ dependencies:
   google_sign_in:
   flutter_facebook_login:
     git:
-      url: https://github.com/qurami/flutter_facebook_login.git
-      ref: fix-loginkit-dependency
+      url: https://github.com/kentcb/flutter_facebook_login.git
+      ref: fixes
   shared_preferences:
 
 dev_dependencies:
