--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  flutter_bloc:
+  flutter_bloc: 0.16.0
   firebase_auth:
   firebase_messaging:
   cloud_firestore:
