--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -20,8 +20,13 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>FacebookAppID</key>
+	<string>1060219264135870</string>
+	<key>FacebookDisplayName</key>
+	<string>Toptal Chat</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
@@ -31,6 +36,17 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>We need your permission in order to send photos from your library.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need your permission in order to send photos directly from your camera feed.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need your permission in order for you to make videos with voice.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -50,5 +66,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Toptal Chat needs access to the photo library to send image files.</string>
 </dict>
 </plist>
