--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .buildlog/
 .history
 .svn/
+conf/
 
 # IntelliJ related
 *.iml
@@ -36,6 +37,8 @@ build/
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/key.properties
+**/android/*.keystore
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
