Fixed facebook login URL scheme

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,7 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>$(FACEBOOK_APP_ID)</string>
+				<string>fb$(FACEBOOK_APP_ID)</string>
 			</array>
 		</dict>
 		<dict>
