--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: Cross-platform chat client using Firebase
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 1.1.0+2
+version: 2.0.0+2
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -20,28 +20,28 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  flutter_bloc:
-  firebase_auth:
-  firebase_messaging:
-  cloud_firestore:
-  firebase_storage:
-  google_sign_in:
-  flutter_facebook_login:
-  shared_preferences:
-  image_picker:
+  flutter_bloc: 6.0.4
+  firebase_core: 0.5.0
+  firebase_auth: 0.18.0+1
+  firebase_messaging: 7.0.0
+  cloud_firestore: 0.14.0+2
+  firebase_storage: 4.0.0
+  google_sign_in: 4.5.3
+  flutter_facebook_auth: 0.2.4
+  shared_preferences: 0.5.10
+  image_picker: 0.6.7+7
+  rxdart: 0.24.1
 
 dev_dependencies:
   test: ^1.5.3
   flutter_test:
     sdk: flutter
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
