--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,11 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   flutter_bloc: 6.0.4
-  firebase_core: 0.5.0
-  firebase_auth: 0.18.0+1
-  firebase_messaging: 7.0.0
-  cloud_firestore: 0.14.0+2
-  firebase_storage: 4.0.0
+  firebase_core: 0.5.3
+  firebase_auth: 0.18.4+1
+  firebase_messaging: 8.0.0-dev.11
+  cloud_firestore: 0.14.4
+  firebase_storage: 5.2.0
   google_sign_in: 4.5.3
   flutter_facebook_auth: 0.2.4
   shared_preferences: 0.5.10
